hime (0.9.9+git20120609+dfsg-1) experimental; urgency=low

  * Imported Upstream version 0.9.9+git20120609+dfsg
  * debian/rules:
    - dirty hack for autoclean
    - remove moving gtk immodules to specific directories
  * debian/hime.install, debian/hime-gtk3-immodule.install:
    update gtk immodules install path
  * debian/copyright: add copyright information for DFSG git package
  * debian/compat: upgrade dh compability to 9

 -- Yao Wei (魏銘廷) <mwei@lxde.org>  Sat, 09 Jun 2012 11:42:18 +0800

hime (0.9.9-2) unstable; urgency=low

  * im-switch configuration fix
  * copyright year update
  * upgrade debian policy standard version to 3.9.3
  * fix im-switch hook script (Closes: #664657)
  * set DM-Upload-Allowed to yes

 -- Yao Wei (魏銘廷) <mwei@lxde.org>  Tue, 03 Apr 2012 15:48:37 +0800

hime (0.9.9-1) unstable; urgency=low

  * Initial release (Closes: #652022)

 -- Yao Wei (魏銘廷) <mwei@lxde.org>  Sat, 14 Jan 2012 00:24:08 +0800