@@ -4,8 +4,10 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
-GTK2VER = $(shell pkg-config --variable=gtk_binary_version gtk+-2.0)
-GTK3VER = $(shell pkg-config --variable=gtk_binary_version gtk+-3.0)
+DPKG_EXPORT_BUILDFLAGS = 1
+include /usr/share/dpkg/buildflags.mk
+CFLAGS+=$(CPPFLAGS)
+CXXFLAGS+=$(CPPFLAGS)
 
 %:
 	dh $@ 
